# sdl3-tmpl

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
